--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div <div class="Nathaly-style">
+                <h3>Nathaly Calderon <em>Sharks<em</em> in Jersey City, New Jersey</h3>
+            </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
